--- a/court-cases.html
+++ b/court-cases.html
@@ -11,7 +11,7 @@
     <div class="header">
       <h4><a href="index.html">Return to Home Page</a></h4>
       <h1>How has the NCAA fared in Court?</h1>
-      <p>The NCAA has been taken to court multiple times in an attmpt to limit their power and, more recently, to challenge the lack of payment for athletes.</p>
+      <p>The NCAA's power over member institutions, coaches, and players has been questioned for decades. As a result of this distrust, the NCAA has been taken to court multiple times since the late 1980s. The main goal in all of these cases is to limit the NCAA's power and, more recently,  challenge the lack of payment for athletes. Below is a timeline of some of the biggest cases involving the NCAA and plaintiffs challenging the NCAA along antitrust laws. Click on one of the cases to learn more about the background, ruling, and impact of these key cases. The full decision for most of these cases can be found <a href="https://www.athleticscholarships.net/important-ncaa-lawsuits.htm" style="color:#d2121e" target="_blank">here</a>, the O'Bannon decision <a href="https://law.justia.com/cases/federal/appellate-courts/ca9/14-16601/14-16601-2015-09-30.html" style="color:#d2121e" target="_blank">here</a>, and the current Alston decision <a href="https://drive.google.com/file/d/1L9ZWKklU02adLfTLlvD5_CM6oMxZnM2X/view" style="color:#d2121e" target="_blank">here</a>.</p>
     </div>
     <div class="line">
       <div class="case board-of-regents">
@@ -79,7 +79,7 @@
           <p><em>Background:</em> Shawne Alston, a former West Virginia running back, and Justine Hartman, a former University of California, Berkeley basketball player, were the lead plaintiffs. They argued that the NCAA's limit on scholarship value violates anti-trust laws which is proved by the very similar numbers across the board. The NCAA responded with two main arguments: 1) players not being paid is important to the interest of fans, 2) student-athletes are more able to integrate into the community.</p>
           <p><em>Question:</em> Is the NCAA's cap on scholarships a violation of antitrust laws?</p>
           <p><em>Ruling:</em> Judge Claudia Wilken ruled that the current system that caps scholarships in the NCAA is illegal. The ruling concluded that the NCAA is not allowed to limit the amount of money related to academics the athletes are able to receive.</p>
-          <p><em>Impact:</em> The effects of this case are still unclear right now. However, the judge did not require any changes to be made by the NCAA nor its member institutes.</p>
+          <p><em>Impact:</em> The effects of this case are still unclear right now. However, the judge did not require any changes to be made by the NCAA nor its member institutes. There is also no promise that this ruling will stand as the NCAA is trying to reverse the ruling and will likely appeal.</p>
         </div>
       </div>
     </div>
