--- a/history.html
+++ b/history.html
@@ -11,7 +11,7 @@
     <div class="header">
       <h4><a href="index.html">Return to Home Page</a></h4>
       <h1>How did the NCAA form?</h1>
-      <p></p>
+      <p>In order to understand the landscape of the NCAA today, it is important to understand how the NCAA was formed. Today, the NCAA <a href="http://www.ncaa.org/about/resources/media-center/ncaa-101/what-ncaa" style="color:#d2121e" target="_blank">reports</a> their current governance extends to nearly 500,000 student-athletes, 19,750 teams, and 1,117 colleges. They also support 90 championships in 24 sports across three divisions. However, the NCAA's main role in regulation began with concern about the safety of the athletes in football. Perhaps most notably, the U.S. President at the time, Teddy Roosevelt, played a big role in developing the NCAA, and he was a huge proponent of amateur sports <a href="https://archive.org/details/jstor-25102032" style="color:#d2121e" target="_blank">writing</a>, "The mere statement of difference is enough to show that the amateur, and not the professional, is the desirable citizen, the man who should be encouraged." Click on each year in the timeline to learn more about important facts about each key date. A more thorough history of the NCAA and regulation can be found <a href="https://scholarship.law.marquette.edu/cgi/viewcontent.cgi?referer=https://www.google.com/&httpsredir=1&article=1393&context=sportslaw" style="color:#d2121e" target="_blank">here</a>.</p>
     </div>
     <div class="line">
       <div class="date first-intercollegiate">
