--- a/professional-comparison.html
+++ b/professional-comparison.html
@@ -12,7 +12,7 @@
       <div class="header">
         <h4><a href="index.html">Return to Home Page</a></h4>
         <h1>How do Scholarships Compare to Professional Salaries?</h1>
-        <p>One big argument against paying student-athletes is scholarships are payment enough. </p>
+        <p>One big argument against paying student-athletes is scholarships are payment enough. So, based solely on the monetary value of a full scholarship, how does it measure up to the amount professional athletes are being paid? Below, the top 10 NFL teams in <a href="https://www.statista.com/statistics/193553/revenue-of-national-football-league-teams-in-2010/" style="color: #d2121e" target="_blank">revenue</a> from 2017 are compared to the top 10 colleges according to football <a href="https://ope.ed.gov/athletics/#/" style="color: #d2121e" target="_blank">revenue</a> from the 2017-2018 season. The red bars represent the amount the NFL teams were paying for their roster in 2017 according to <a href="https://overthecap.com/salary-cap-space/" style="color: #d2121e" target="_blank">Over the Top</a> and the amount colleges spend on the scholarships for all 85 players according to the scholarship values from <a href="https://www.collegesimply.com/colleges/" style="color: #d2121e" target="_blank">College Simply</a>. The grey bars represent the remaining revenue for each team after they have paid for their athletes. Click on a bar to toggle between dollar amounts and percentage.</p>
       </div>
     </div>
 
