edits to the paragraphs

--- a/court-cases.html
+++ b/court-cases.html
@@ -23,7 +23,7 @@
           <p>Many major schools created a new group within the NCAA called the College Football Association (CFA) which then negotiated a separate television contract that was better for the schools involved. The schools within the CFA had more opportunities to play on television and earned higher revenues from the contract. The NCAA decided to announce disciplinary action for the schools participating in the CFA, and some of the schools took the issue to court.</p>
           <p><em>Question:</em> Does the NCAA plan for televised football games impose a restraint on the free market and thus violate the Sherman Act?</p>
           <p><em>Ruling:</em>The Supreme Court voted 7-2 in favor of the Board of Regents. The court ruled the NCAA's plan created a market unresponsive to viewer demands. By limiting the number of live games on television, the NCAA was attempting to inflate prices for tickets as in a monopoly.</p>
-          <p><em>Impact:</em> This ruling has allowed for big contracts to be created by individual schools (e.g., Notre Dame with NBC) and by conferences (e.g., the Longhorn Network in partnership with ESPN)</p>
+          <p><em>Impact:</em> This ruling has allowed for big contracts to be created by individual schools (e.g., Notre Dame with NBC) and by conferences (e.g., the Longhorn Network in partnership with ESPN).</p>
         </div>
       </div>
       <div class="case tarkanian">
@@ -45,7 +45,7 @@
           <p><em>Background:</em> A new group of coaches – "restricted earnings" – was defined in a new rule. The rule limited the the salaries of these coaches to $16,000 per year. A number of coaches challenged the NCAA's right to limit their salaries arguing the rule was a contract in restraint of trade. The NCAA argued that they had specific power in the market and defined justifications defending their salary limit.</p>
           <p><em>Question:</em> Does the NCAA's limit on annual compensation for coaches violate the Sherman Anti-trust Act?</p>
           <p><em>Ruling:</em> The district court ruled in favor of Law and the rest of the coaches. The court decided the restricted earnings cap violated anti-trust law and was not covered by the exception from NCAA v Board of Regents.</p>
-          <p><em>Impact:</em> The coaches not won the case, therefore, allowing a higher salary, they also won a judgement on back pay. In 2009, the back pay was finally settled at $54.5 million.</p>
+          <p><em>Impact:</em> The coaches not only won the case allowing for a higher salary, they also won a judgement on back pay. In 2009, the back pay was finally settled at $54.5 million.</p>
           <p>A big question left from this case is what is the difference between the coaches and the players making a salary cap okay on one but not the other?</p>
         </div>
       </div>
@@ -56,7 +56,7 @@
           <div class="scroll-area"></div>
           <p><em>Background:</em> Former Football and Men's Basketball players decided to sue the NCAA on behalf of all student-athletes participating at the highest levels of Football and Men's Basketball. The former student-athletes argued NCAA member institutions' limit on athletic-based aid including tuition, books, housing, and meals was violating anti-trust laws.</p>
           <p><em>Question:</em> Did the NCAA violate antitrust laws by limiting athletic-based aid?</p>
-          <p><em>Ruling:</em> A settlement was reached prior to the case being tried.</p>
+          <p><em>Ruling:</em> A settlement was reached prior to the case being tried. Therefore, there was no decision on the question.</p>
           <p><em>Impact:</em> A $10 million fund was started for former NCAA athletes can apply to for funds for career development or reimbursement of educational expenses. The settlement also led to a loosening of how member schools could use their money to support student-athlete academic development. The NCAA also changed their policies on health and accident insurance after this case.</p>
         </div>
       </div>
