--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
       </div>
       <div class="summary">
-        <p style="font-size:18px"><strong>Student-athletes are slaves</strong> versus <strong>I've been working my whole life.</strong> Unfortunately, sensationalized arguments like these have become commonplace in the debate over whether or not student-athletes should be paid. Below, are the facts surrounding some key questions: how much do schools actually make off athletics; how would paying athletes change recruiting parity; how difficult is it to follow the rules; where do the terms amateur and student-athlete come from; how much do professional athletes really get paid;</p>
+        <p style="font-size:18px"><strong>Student-athletes are slaves</strong> versus <strong>I've been working my whole life.</strong> Unfortunately, sensationalized arguments like these have become commonplace in the debate over whether or not student-athletes should be paid. Below, are the facts surrounding some key questions: how much do schools actually make off athletics; how would paying athletes change recruiting parity; how difficult is it to follow the rules; where do the terms amateur and student-athlete come from; how much do professional athletes really get paid. Below are the facts so you can form your own educated opinion on these topics.</p>
       </div>
       <div class="facts">
         <div class="facts-buttons">
@@ -173,13 +173,13 @@
           <h2><a href="court-cases.html">NCAA and the Supreme Court</a></h2>
         </div>
         <div class="facts-buttons">
-          <h2><a href="professional-comparison.html">Comparison to <br> Professional</a></h2>
+          <h2><a href="professional-comparison.html">Comparison to Professional</a></h2>
         </div>
         <div class="facts-buttons">
           <h2><a href="recruiting-parity.html">Recruiting Parity</a></h2>
         </div>
         <div class="facts-buttons">
-          <h2><a href="rulebook.html">The <br> Rulebook</a></h2>
+          <h2><a href="rulebook.html">The Rulebook</a></h2>
         </div>
       </div>
     </div>
