--- a/ncaa-finances.html
+++ b/ncaa-finances.html
@@ -11,152 +11,154 @@
     <div class="header">
       <h4><a href="index.html">Return to Home Page</a></h4>
       <h1>Where Does the NCAA Earn its Money, and Where Does that Money Go?</h1>
-      <p>The D1 Men's Basketball National Championship Tournament takes place every March (commonly referred to as March Madness). A large portion of the population turns their attention to creating and betting on brackets. This tournament is probably the NCAA's bigget example of contradiction as around all of the arenas they tout their restriction on any type of sports gambling (all employees of an athletics department are restricted from gambling on any sport the NCAA sponsors at any level), while on their website is a bracket creation game. And the NCAA makes nearly 80% of their revenue by encouraging people to bet on their game.</p>
+      <p>The D1 Men's Basketball National Championship Tournament takes place every March (commonly referred to as March Madness). A large portion of the population turns their attention to creating and betting on brackets. This tournament is probably the NCAA's biggest example of contradiction as across advertising platforms they tout their restriction on any type of sports gambling (all employees of an athletics department are restricted from gambling on any sport the NCAA sponsors at any level), while on the NCAA website there is a bracket competition. And the NCAA makes nearly 80% of their revenue by encouraging people to bet on their game.</p>
       <p>It's obvious there's a lot of money being moved around in NCAA Athletics. To decide whether these revenue and expense streams should be adjusted to pay student-athletes, it's important to understand the current state of NCAA finances. These numbers come directly from the <a href="http://www.ncaa.org/about/where-does-money-go" style="color:#d2121e;"target="blank">NCAA Website</a>. A <em>major</em> consideration in these numbers is that the FBS College Football Playoffs and all of the bowl games are not actually operated by the NCAA. As a result, the NCAA spends nothing on these games and receives none of the profit. The College Football Playoffs is actually a separate operation bringing in more money than the Men's Basketball Championship and distributing directly to the conferences involved in the playoff committee.  Click on each dollar amount to learn more.</p>
     </div>
-    <div class="profit-equation">
-      <div class="equation">
-        <h2>1,061M</h2>
-        <h3>Revenue</h3>
-        <h5>Year ended 8/31/17</h5>
+    <div class="full-equation">
+      <div class="profit-equation">
+        <div class="equation">
+          <h2>1,061M</h2>
+          <h3>Revenue</h3>
+          <h5>Year ended 8/31/17</h5>
+        </div>
+        <h3>-</h3>
+        <div class="equation">
+          <h2>956M</h2>
+          <h3>Expenses</h3>
+          <h5>Year ended 8/31/17</h5>
+        </div>
+        <h3>=</h3>
+        <div class="equation">
+          <h2>105M</h2>
+          <h3>Profit</h3>
+          <h5>Year ended 8/31/17</h5>
+        </div>
       </div>
-      <h3>-</h3>
-      <div class="equation">
-        <h2>956M</h2>
-        <h3>Expenses</h3>
-        <h5>Year ended 8/31/17</h5>
-      </div>
-      <h3>=</h3>
-      <div class="equation">
-        <h2>105M</h2>
-        <h3>Profit</h3>
-        <h5>Year ended 8/31/17</h5>
-      </div>
-    </div>
-    <div class="profit-equation">
-      <div class="equation-parts">
-        <h1 style="text-decoration:none">844M</h1>
-        <h5>D1 men's basketball championship television and marketing rights</h5>
-        <div class="equation1 championship-tickets">
-          <h1>133M</h1>
-          <h5>championship ticket sales</h5>
-          <div class="equation-modal championship-tickets-reveal">
-            <p>The NCAA sponsors 90 NCAA championships and claims only 5 of these make a profit. The 5 profitable championships are all D1, men's sports including: Men's Basketball, Men's Ice Hockey, Men's Lacrosse, Wrestling, and Baseball.</p>
-            <p>The D1 College Football Playoffs and all of the bowl games are run independently of the NCAA, so the NCAA does not fund nor receive revenue from these games.</p>
+      <div class="profit-equation">
+        <div class="equation-parts">
+          <h1 style="text-decoration:none">844M</h1>
+          <h5>D1 men's basketball championship television and marketing rights</h5>
+          <div class="equation1 championship-tickets">
+            <h1>133M</h1>
+            <h5>championship ticket sales</h5>
+            <div class="equation-modal championship-tickets-reveal">
+              <p>The NCAA sponsors 90 NCAA championships and claims only 5 of these make a profit. The 5 profitable championships are all D1, men's sports including: Men's Basketball, Men's Ice Hockey, Men's Lacrosse, Wrestling, and Baseball.</p>
+              <p>The D1 College Football Playoffs and all of the bowl games are run independently of the NCAA, so the NCAA does not fund nor receive revenue from these games.</p>
+            </div>
           </div>
-        </div>
-        <h1 style="text-decoration:none">>0</h1>
-        <h5>other revenues from a variety of sources</h5>
-      </div>
-
-      <div class="equation-parts"></div>
-
-      <div class="equation-parts">
-        <div class="equation1 sport-sponsorship">
-          <h1>217M</h1>
-          <h5>sport sponsorship and scholarship funds</h5>
-          <div class="equation-modal sport-sponsorship-reveal">
-            <p>Distributed to Division I schools to help fund NCAA sports and provide scholarships for college athletes.</p>
-          </div>
-        </div>
-        <div class="equation1 march-madness">
-          <h1>165M</h1>
-          <h5>D1 basketball performance fund</h5>
-          <div class="equation-modal march-madness-reveal">
-            <p>Distributed to Division I conferences and independent schools based on their performance in the men’s basketball tournament over a six-year rolling period. The money is used to fund NCAA sports and provide scholarships for college athletes.</p>
-          </div>
-        </div>
-        <div class="equation1 travel">
-          <h1>103M</h1>
-          <h5>D1 championships</h5>
-          <div class="equation-modal travel-reveal">
-            <p>Provides college athletes the opportunity to compete for a championship and includes support for team travel, food and lodging.</p>
-          </div>
-        </div>
-        <div class="equation1 association">
-          <h1>88M</h1>
-          <h5>other association-wide expenses</h5>
-          <div class="equation-modal association-reveal">
-            <p>Includes support for Association-wide legal services, communications and business insurance.</p>
-          </div>
-        </div>
-        <div class="equation1 needs">
-          <h1>85M</h1>
-          <h5>student assistance fund/h5>
-          <div class="equation-modal needs-reveal">
-            <p>Distributed to Division I student-athletes for essential needs that arise during their time in college.</p>
-          </div>
-        </div>
-        <div class="equation1 services">
-          <h1>74M</h1>
-          <h5>student-athlete services and championships support</h5>
-          <div class="equation-modal services-reveal">
-            <p>Includes funding for catastrophic injury insurance, drug testing, student-athlete leadership programs, postgraduate scholarships and additional Association-wide championships support.</p>
-          </div>
-        </div>
-        <div class="equation1 conference">
-          <h1>52M</h1>
-          <h5>D1 equal conference fund</h5>
-          <div class="equation-modal conference-reveal">
-            <p>Distributed equally among Division I basketball-playing conferences that meet athletic and academic standards to play in the men's basketball tournament. The money is used to fund NCAA sports and provide scholarships for college athletes.</p>
-          </div>
-        </div>
-        <div class="equation1 academics">
-          <h1>48M</h1>
-          <h5>academic enhancement fund</h5>
-          <div class="equation-modal academics-reveal">
-            <p>Distributed to Division I schools to assist with academic programs and services.</p>
-          </div>
-        </div>
-        <div class="equation1 administrative">
-          <h1>43M</h1>
-          <h5>general and administrative expenses</h5>
-          <div class="equation-modal administrative-reveal">
-            <p>Funds the day-to-day operations of the NCAA national office, including administrative and financial services, information technology and facilities management.</p>
-          </div>
-        </div>
-        <div class="equation1 d2">
-          <h1>42M</h1>
-          <h5>D2 allocation</h5>
-          <div class="equation-modal d2-reveal">
-            <p>Funds championships, grants and other initiatives for Division II college athletes.</p>
-          </div>
-        </div>
-        <div class="equation1 membership">
-          <h1>41M</h1>
-          <h5>membership support systems</h5>
-          <div class="equation-modal membership-reveal">
-            <p>Covers costs related to NCAA governance committees and the annual NCAA Convention.</p>
-          </div>
-        </div>
-        <div class="equation1 d3">
-          <h1>32M</h1>
-          <h5>D3 allocation</h5>
-          <div class="equation-modal d3-reveal">
-            <p>Funds championships, grants and other initiatives for Division III college athletes.</p>
-          </div>
-        </div>
-        <div class="equation1 grants">
-          <h1>10M</h1>
-          <h5>D1 conference grants for programming to enhance sports</h5>
-          <div class="equation-modal grants-reveal">
-            <p>Distributed to Division I conferences for programs that enhance officiating, compliance, minority opportunities and more.</p>
-          </div>
-        </div>
-        <div class="equation1 educational">
-          <h1>3M</h1>
-          <h5>educational programs</h5>
-          <div class="equation-modal educational-reveal">
-            <p>Supports varous educational services for members to help prepare student-athletes for life, including the Women Coaches Academy, the Emerging Leaders Seminars and the Pathway Program.</p>
-          </div>
+          <h1 style="text-decoration:none">>0</h1>
+          <h5>other revenues from a variety of sources</h5>
         </div>
 
-      </div>
-      <div class="equation-parts">
+        <div class="equation-parts"></div>
 
-      </div>
-      <div class="equation-parts">
+        <div class="equation-parts">
+          <div class="equation1 sport-sponsorship">
+            <h1>217M</h1>
+            <h5>sport sponsorship and scholarship funds</h5>
+            <div class="equation-modal sport-sponsorship-reveal">
+              <p>Distributed to Division I schools to help fund NCAA sports and provide scholarships for college athletes.</p>
+            </div>
+          </div>
+          <div class="equation1 march-madness">
+            <h1>165M</h1>
+            <h5>D1 basketball performance fund</h5>
+            <div class="equation-modal march-madness-reveal">
+              <p>Distributed to Division I conferences and independent schools based on their performance in the men’s basketball tournament over a six-year rolling period. The money is used to fund NCAA sports and provide scholarships for college athletes.</p>
+            </div>
+          </div>
+          <div class="equation1 travel">
+            <h1>103M</h1>
+            <h5>D1 championships</h5>
+            <div class="equation-modal travel-reveal">
+              <p>Provides college athletes the opportunity to compete for a championship and includes support for team travel, food and lodging.</p>
+            </div>
+          </div>
+          <div class="equation1 association">
+            <h1>88M</h1>
+            <h5>other association-wide expenses</h5>
+            <div class="equation-modal association-reveal">
+              <p>Includes support for Association-wide legal services, communications and business insurance.</p>
+            </div>
+          </div>
+          <div class="equation1 needs">
+            <h1>85M</h1>
+            <h5>student assistance fund</h5>
+            <div class="equation-modal needs-reveal">
+              <p>Distributed to Division I student-athletes for essential needs that arise during their time in college.</p>
+            </div>
+          </div>
+          <div class="equation1 services">
+            <h1>74M</h1>
+            <h5>student-athlete services and championships support</h5>
+            <div class="equation-modal services-reveal">
+              <p>Includes funding for catastrophic injury insurance, drug testing, student-athlete leadership programs, postgraduate scholarships and additional Association-wide championships support.</p>
+            </div>
+          </div>
+          <div class="equation1 conference">
+            <h1>52M</h1>
+            <h5>D1 equal conference fund</h5>
+            <div class="equation-modal conference-reveal">
+              <p>Distributed equally among Division I basketball-playing conferences that meet athletic and academic standards to play in the men's basketball tournament. The money is used to fund NCAA sports and provide scholarships for college athletes.</p>
+            </div>
+          </div>
+          <div class="equation1 academics">
+            <h1>48M</h1>
+            <h5>academic enhancement fund</h5>
+            <div class="equation-modal academics-reveal">
+              <p>Distributed to Division I schools to assist with academic programs and services.</p>
+            </div>
+          </div>
+          <div class="equation1 administrative">
+            <h1>43M</h1>
+            <h5>general and administrative expenses</h5>
+            <div class="equation-modal administrative-reveal">
+              <p>Funds the day-to-day operations of the NCAA national office, including administrative and financial services, information technology and facilities management.</p>
+            </div>
+          </div>
+          <div class="equation1 d2">
+            <h1>42M</h1>
+            <h5>D2 allocation</h5>
+            <div class="equation-modal d2-reveal">
+              <p>Funds championships, grants and other initiatives for Division II college athletes.</p>
+            </div>
+          </div>
+          <div class="equation1 membership">
+            <h1>41M</h1>
+            <h5>membership support systems</h5>
+            <div class="equation-modal membership-reveal">
+              <p>Covers costs related to NCAA governance committees and the annual NCAA Convention.</p>
+            </div>
+          </div>
+          <div class="equation1 d3">
+            <h1>32M</h1>
+            <h5>D3 allocation</h5>
+            <div class="equation-modal d3-reveal">
+              <p>Funds championships, grants and other initiatives for Division III college athletes.</p>
+            </div>
+          </div>
+          <div class="equation1 grants">
+            <h1>10M</h1>
+            <h5>D1 conference grants for programming to enhance sports</h5>
+            <div class="equation-modal grants-reveal">
+              <p>Distributed to Division I conferences for programs that enhance officiating, compliance, minority opportunities and more.</p>
+            </div>
+          </div>
+          <div class="equation1 educational">
+            <h1>3M</h1>
+            <h5>educational programs</h5>
+            <div class="equation-modal educational-reveal">
+              <p>Supports varous educational services for members to help prepare student-athletes for life, including the Women Coaches Academy, the Emerging Leaders Seminars and the Pathway Program.</p>
+            </div>
+          </div>
 
+        </div>
+        <div class="equation-parts">
+
+        </div>
+        <div class="equation-parts">
+
+        </div>
       </div>
     </div>
 
