--- a/sources.html
+++ b/sources.html
@@ -56,8 +56,8 @@
         <li>“Seahawks Slam NCAA.” SBNation.com, SBNation.com, 30 Jan. 2015, www.sbnation.com/college-football/2015/1/30/7951529/seahawks-richard-sherman-michael-bennett-slam-ncaa. “Why a 2020 Presidential Candidate Is Advocating for NCAA Athletes to Get Paid.” Yahoo! Sports, Yahoo!, sports.yahoo.com/why-a-2020-presidential-candidate-is-advocating-for-ncaa-athletes-to-get-paid-232306798.html.</li>
         <li> Wilcox, Alex. “Fr. Jenkins, Mike Brey Discuss Recommendations from Commission on College Basketball.” WNDU, www.wndu.com/content/news/Fr-Jenkins-Mike-Brey-discuss-recommendations-from-Commission-on-College-Basketball-480877321.html.</li>
         <li>Winn, Luke, and Colin Becht. “Supreme Court Decision Leaves NCAA Amateurism in Limbo.” SI.com, www.si.com/college-basketball/2016/10/03/ed-obannon-ncaa-lawsuit-supreme-court. Withiam, Hannah, and Hannah Withiam.</li>
-        <li></li> “Lonzo Ball Calls for College Athletes to Be Paid: Everyone's Doing It.” New York Post, New York Post, 23 Feb. 2018, nypost.com/2018/02/23/lonzo-ball-calls-for-college-athletes-to-be-paid-everyones-doing-it/.</li>
-        <li></li> “Should College Athletes Be Paid? Experts Weigh In.” WalletHub, wallethub.com/blog/should-college-athletes-be-paid/22681/.</li>
+        <li>“Lonzo Ball Calls for College Athletes to Be Paid: Everyone's Doing It.” New York Post, New York Post, 23 Feb. 2018, nypost.com/2018/02/23/lonzo-ball-calls-for-college-athletes-to-be-paid-everyones-doing-it/.</li>
+        <li>“Should College Athletes Be Paid? Experts Weigh In.” WalletHub, wallethub.com/blog/should-college-athletes-be-paid/22681/.</li>
       </ul>
   </body>
 </html>
