--- a/history.html
+++ b/history.html
@@ -18,24 +18,24 @@
         <div class="circle"><h2>1852</h2></div>
         <h3>First intercollegiate athletic event</h3>
         <div class="button-modal first-intercollegiate-reveal">
-          <p>Harvard and Yale begin competing in rowing. One of the first events was sponsored by a high profile rail-line and Harvard attempted to compete with a coxswain who was not a college athlete - already that competition requires regulation</p>
-          <p>There also already existed a concern over whether athletics was losing its academic moorings: the President of MIT said “if the movement shall continue at the same rate, it will soon be fairly a questions whether the letters B.A. stand more for Bachelor of Arts or Bachelor of Athletics</p>
+          <p>Harvard and Yale begin competing in rowing. One of the first events was sponsored by a high profile rail-line and Harvard attempted to compete with a coxswain who was not a college athlete - already that competition requires regulation.</p>
+          <p>There also already existed a concern over whether athletics was losing its academic moorings: the President of MIT said “if the movement shall continue at the same rate, it will soon be fairly a question whether the letters B.A. stand more for Bachelor of Arts or Bachelor of Athletics."</p>
         </div>
       </div>
       <div class="date iaa">
         <div class="circle"><h2>1906</h2></div>
         <h3>Intercollegiate Athletic Assoication founded</h3>
         <div class="button-modal iaa-reveal">
-          <p>Intercollegiate Athletic Association founded with 62 original members - this is a joint effort between the White House (President Theodore Roosevelt) and University Presidents especially spearheaded by NYU Chancellor Henry MacCracken</p>
-          <p>An under-regulated landscape was clear and especially in safety. In 1905 alone there were over 18 deaths and 100 major injuries in intercollegiate football alone with less than 1/10 the number of schools playing football as there are today.</p>
+          <p>Intercollegiate Athletic Association founded with 62 original members - this is a joint effort between the White House (President Theodore Roosevelt) and University Presidents spearheaded by NYU Chancellor Henry MacCracken.</p>
+          <p>It was clear the landscape was under-regulated especially relating to the safety of athletes. In 1905 alone there were over 18 deaths and 100 major injuries in intercollegiate football alone with less than 1/10 the number of schools playing football as there are today.</p>
         </div>
       </div>
       <div class="date ncaa-named">
         <div class="circle"><h2>1910</h2></div>
         <h3>Renamed National Collegiate Athletic Association</h3>
         <div class="button-modal ncaa-named-reveal">
-          <p>IAA is renamed NCAA, did not play a major role in governing athletics but did begin to sponsor national championships for sports. Realistically, the NCAA did not have the power to keep up with how regulating the landscape</p>
-          <p>Throughout the 1920s, intercollegiate athletics were becoming more and more integral to the experience of higher education. In 1929, the Carnegie Foundation for the Advancement of College Athletics releases a report declaring commercialization is playing too large of a role in intercollegiate athletics which should be about “the opportunities it affords to mature youth”</p>
+          <p>The IAA is renamed to the NCAA. The association did not yet play a major role in governing athletics, and instead focused on sponsoring national championships for sports. Realistically, the NCAA did not have the power to keep up with regulating the landscape.</p>
+          <p>Throughout the 1920s, intercollegiate athletics were becoming more and more integral to the experience of higher education. In 1929, the Carnegie Foundation for the Advancement of College Athletics released a report declaring that commercialization is playing too large of a role in intercollegiate athletics which should be about “the opportunities it affords to mature youth.”</p>
         </div>
       </div>
       <div class="date compliance">
@@ -57,9 +57,9 @@
         <div class="circle"><h2>1970s</h2></div>
         <h3>Criticism over strict and unfair enforcement of rules grows</h3>
         <div class="button-modal criticism-reveal">
-          <p>People begin to questions the fairness of the NCAA’s enforcement and also the extent of power the NCAA yields. In response, the NCAA adopts changes in attempts to address concerns, but is unsuccessful in limiting complaints.</p>
-          <p>In 1978, the United States House of Representatives Subcommittee on Oversight and Investigation held hearings to investigate alleged unfairness</p>
-          <p>o	University presidents are becoming more concerned with the NCAA’s power as they begin to realize the possible expense/revenue potential and also that their reputations are sometimes tied to the success of athletics</p>
+          <p>People begin to question the fairness of the NCAA’s enforcement and also the extent of power the NCAA yields. In response, the NCAA adopts changes in attempts to address concerns, but is unsuccessful in limiting complaints.</p>
+          <p>In 1978, the United States House of Representatives Subcommittee on Oversight and Investigation held hearings to investigate alleged unfairness.</p>
+          <p>University presidents are becoming more concerned with the NCAA’s power as they begin to realize the possible expense/revenue potential and also that their reputations are sometimes tied to the success of athletics.</p>
         </div>
       </div>
 
